[project]
name = "md-yolo"
version = "0.1.0"
description = "Experiments with YOLO object detection models and their variations"
readme = "README.md"
authors = [
    { name = "muwayne", email = "muwayne@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "opencv-python>=4.6.0",
    "Pillow>=9.2.0",
    "matplotlib>=3.5.3",
    "pandas>=1.4.3",
    "scikit-learn>=1.1.2",
    "tensorboard>=2.10.0",
    "ultralytics>=8.0.0",
    "albumentations>=1.3.0",
    "pycocotools>=2.0.6",
    "roboflow>=0.2.29",
    "tqdm>=4.64.0",
    "PyYAML>=6.0",
    "seaborn>=0.12.0",
    "ipykernel>=6.15.1",
    "wandb>=0.13.4",
]

[project.scripts]
md-yolo = "md_yolo:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
